--- a/corelib/webApp/WebApp/WebApp/Web.config
+++ b/corelib/webApp/WebApp/WebApp/Web.config
@@ -23,6 +23,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off" defaultRedirect="~/Home/ErrorPage" redirectMode="ResponseRedirect">
+      <error statusCode="404" redirect="~/Home/ErrorPage" />
+    </customErrors>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
@@ -65,6 +68,9 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>
+    <!--<customErrors mode="Off" defaultRedirect="~/Home" redirectMode="ResponseRedirect">
+      <error statusCode="404" redirect="~/Home" />
+    </customErrors>-->
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
