--- a/corelib/webApp/WebApp/WebApp/WebApp.csproj
+++ b/corelib/webApp/WebApp/WebApp/WebApp.csproj
@@ -142,6 +142,7 @@
     <Compile Include="DbModels\Users.cs" />
     <Compile Include="helpers\Constant.cs" />
     <Compile Include="helpers\Helper.cs" />
+    <Compile Include="Models\RequestsModule.cs" />
     <Compile Include="Models\UserModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -207,6 +208,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="Content\theme\css\bootstrap-datepicker.min.css" />
     <Content Include="Content\theme\css\bootstrap.min.css" />
     <Content Include="Content\theme\css\components.css" />
     <Content Include="Content\theme\css\core.css" />
@@ -320,6 +322,7 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\plugins\bootstrap-datepicker.min.js" />
     <Content Include="Scripts\plugins\bootstrap-tagsinput.min.js" />
     <Content Include="Scripts\plugins\jquery.circliful.min.js" />
     <Content Include="Scripts\plugins\jquery.counterup.min.js" />
